# shoal

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mise.toml  rust-toolchain.toml  slumber.yml
src/: data.rs  error.rs  main.rs  routes.rs
src/routes/: anything.rs  fish.rs  misc.rs
static/: docs.html  openapi.yml
