[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Example HTTP API with lots of fish"
edition = "2024"
homepage = "https://github.com/LucasPickering/shoal"
keywords = []
license = "MIT"
name = "shoal"
repository = "https://github.com/LucasPickering/shoal"
version = "0.1.0"
# Keep in sync w/ rust-toolchain.toml
rust-version = "1.86.0"

[dependencies]
axum = "0.7"
derive_more = {version = "2.0.1", default-features = false, features = ["display"]}
indexmap = "2.10.0"
rand = {version = "0.9.1", default-features = false, features = ["thread_rng"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
utoipa = {version = "4.0", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "6.0", features = ["axum"]}


[workspace.lints.rust]
async_fn_in_trait = "allow"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = {level = "deny", priority = -1}
pedantic = {level = "warn", priority = -1}

allow_attributes = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
dbg_macro = "warn"
default_trait_access = "allow"
doc_markdown = "allow"
explicit_deref_methods = "allow"
large_enum_variant = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
