[package]
authors = ["Lucas Pickering <lucas@lucaspickering.me>"]
description = "Example HTTP API with lots of fish"
edition = "2024"
homepage = "https://github.com/LucasPickering/shoal"
keywords = []
license = "MIT"
name = "shoal"
repository = "https://github.com/LucasPickering/shoal"
version = "0.1.0"

[dependencies]
anyhow = "1.0.99"
axum = {version = "0.8", features = ["macros"]}
bytes = "1.10.1"
indexmap = "2.10.0"
rusqlite = {version = "0.37.0", default-features = false, features = ["backup", "bundled"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.16"
tokio = {version = "1.0", features = ["full"]}
tower-http = {version = "0.6.6", features = ["trace"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", default-features = false, features = ["fmt"]}
utoipa = {version = "5.4", features = ["axum_extras"]}
utoipa-swagger-ui = {version = "9.0", features = ["axum"]}

[workspace.lints.rust]
async_fn_in_trait = "allow"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = {level = "deny", priority = -1}
pedantic = {level = "warn", priority = -1}

allow_attributes = "deny"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
dbg_macro = "warn"
default_trait_access = "allow"
doc_markdown = "allow"
explicit_deref_methods = "allow"
large_enum_variant = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
used_underscore_binding = "allow"
